--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/spikes.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Tiles/", "res://Sprites/Objects/", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Tiles/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/player.tscn", "res://Scenes/enemy.tscn", "res://Scenes/spikes.tscn")
-current_scene="res://Scenes/spikes.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/player.tscn", "res://Scenes/enemy.tscn", "res://Scenes/spikes.tscn", "res://Scenes/flag.tscn", "res://Scenes/lvl_2.tscn", "res://Scenes/coin.tscn")
+current_scene="res://Scenes/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/enemy.gd", "res://Scripts/Player.gd", "res://spikes.gd"]
-selected_script="res://spikes.gd"
+open_scripts=["res://Scripts/Coin.gd", "res://Scripts/enemy.gd", "res://Scripts/flag.gd", "res://Scripts/Player.gd", "res://spikes.gd"]
+selected_script="res://Scripts/Player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
